Migrate to BannerMessagePreference and BannerMessagePreferenceGroup for all banners on the Home page.
Screenshots just for illustration, they would show only when required.

Legacy: https://drive.google.com/file/d/11XlKmIYYG0sNLanHkHGSdEPachXi5-Wn/view?usp=drive_link&resourcekey=0-a1u3gtStZoaJYDce-IlVEA
Legacy on U: https://drive.google.com/file/d/1nH5gpaio8h0f8bSwt1XI2wh3V_tp0N0w/view?usp=drive_link&resourcekey=0-2clkgOmqb86T7ahzW6ystw
Expressive: https://drive.google.com/file/d/1GPc7g_cM0ImkFUk0FXBwdbxVg7A7KJ8v/view?usp=drive_link&resourcekey=0-vNHJwfj1Y2XleOiaJRcHHA

Bug: 380050244
Test: atest
Flag: NONE wip
Change-Id: Ic24986ca700a09c14e0f687b9d8131f9e197d60e

--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="browse_data_title" description="Label for button that allows the user to browse data [CHAR_LIMIT=NONE]">Browse data</string>
     <string name="browse_data_subtitle" description="Description for button that allows the user to browse data [CHAR_LIMIT=NONE]">See data and which apps can access it</string>
     <string name="manage_data_summary" description="Summary for the manage data preference. [CHAR_LIMIT=NONE]">Auto-delete, data sources, backup and restore</string>
+
+    <string name="banner_group_more_items" description="Title for button to expand a banner preference group when one or more banners are hidden [CHAR_LIMIT]=50">More items</string>
+    <string name="banner_group_fewer_items" description="Title for button to collapse banner preference group and only show the first banner [CHAR_LIMIT]=50">Fewer items</string>
     <!--  endregion -->
 
     <!-- region Manage data -->
