--- a/apk/res/values-en-rCA/strings.xml
+++ b/apk/res/values-en-rCA/strings.xml
@@ -56,6 +56,10 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Manage permissions"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Time: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"No recent access"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Apps which have recently accessed your data will automatically show here"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"View all"</string>
+    <string name="recent_access_error" msgid="2258399573560888960">"Could not load recent access"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Activity"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"activity"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Body measurements"</string>
