--- a/apk/res/values-as/strings.xml
+++ b/apk/res/values-as/strings.xml
@@ -56,6 +56,11 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"অনুমতি পৰিচালনা কৰক"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"সময়: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"কোনো শেহতীয়া এক্সেছ নাই"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"শেহতীয়াকৈ আপোনাৰ ডেটা এক্সেছ কৰা এপ্‌সমূহ ইয়াত স্বয়ংক্ৰিয়ভাৱে দেখুওৱা হ’ব"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"আটাইবোৰ চাওক"</string>
+    <!-- no translation found for recent_access_error (2258399573560888960) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"কাৰ্যকলাপ"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"কাৰ্যকলাপ"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"শৰীৰৰ জোখ-মাখ"</string>
