--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -56,6 +56,11 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Διαχείριση αδειών"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Ώρα: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Δεν υπάρχει πρόσφατη πρόσβαση"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Οι εφαρμογές που έχουν αποκτήσει πρόσφατα πρόσβαση στα δεδομένα σας θα εμφανίζονται αυτόματα εδώ"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"Προβολή όλων"</string>
+    <!-- no translation found for recent_access_error (2258399573560888960) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Δραστηριότητα"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"δραστηριότητα"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Μετρήσεις σώματος"</string>
