--- a/apk/res/values-hi/strings.xml
+++ b/apk/res/values-hi/strings.xml
@@ -56,6 +56,11 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"अनुमतियां मैनेज करें"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"समय: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"किसी ऐप्लिकेशन ने हाल ही में, स्वास्थ्य से जुड़ा डेटा ऐक्सेस नहीं किया है"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"हाल ही में, आपके स्वास्थ्य से जुड़ा डेटा ऐक्सेस करने वाले ऐप्लिकेशन, यहां अपने-आप दिखेंगे"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"पूरी जानकारी देखें"</string>
+    <!-- no translation found for recent_access_error (2258399573560888960) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"गतिविधि का डेटा"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"गतिविधि"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"शरीर की माप"</string>
