--- a/apk/res/values-ka/strings.xml
+++ b/apk/res/values-ka/strings.xml
@@ -56,6 +56,11 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ნებართვების მართვა"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"დრო: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"ბოლოდროინდელი წვდომა არ არის"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"აპები, რომლებსაც ახლახან ჰქონდათ წვდომა თქვენს მონაცემებზე, ავტომატურად გამოჩნდება აქ"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"ყველას ნახვა"</string>
+    <!-- no translation found for recent_access_error (2258399573560888960) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"აქტივობა"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"აქტივობა"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"სხეულის ზომები"</string>
