--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -56,6 +56,11 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"គ្រប់គ្រង​ការអនុញ្ញាត"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"ម៉ោង៖ <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"គ្មានការចូលប្រើនាពេលថ្មីៗទេ"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"កម្មវិធីដែលបានចូលប្រើទិន្នន័យរបស់អ្នកនាពេលថ្មីៗនេះនឹងបង្ហាញនៅទីនេះដោយស្វ័យប្រវត្តិ"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"មើលទាំងអស់"</string>
+    <!-- no translation found for recent_access_error (2258399573560888960) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"សកម្មភាព"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"សកម្មភាព"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"រង្វាស់រាងកាយ"</string>
