--- a/apk/res/values-kn/strings.xml
+++ b/apk/res/values-kn/strings.xml
@@ -56,6 +56,11 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ಅನುಮತಿಗಳನ್ನು ನಿರ್ವಹಿಸಿ"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"ಸಮಯ: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"ಯಾವುದೇ ಆ್ಯಪ್‌ ಇತ್ತೀಚಿಗೆ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಿಲ್ಲ"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಇತ್ತೀಚೆಗೆ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಿದ ಆ್ಯಪ್‌ಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಇಲ್ಲಿ ತೋರಿಸುತ್ತವೆ"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"ಎಲ್ಲವನ್ನೂ ವೀಕ್ಷಿಸಿ"</string>
+    <!-- no translation found for recent_access_error (2258399573560888960) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"ಚಟುವಟಿಕೆ"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"ಚಟುವಟಿಕೆ"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"ದೇಹದ ಅಳತೆಗಳು"</string>
