--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -56,6 +56,11 @@
     <string name="separator" msgid="5521285473288943819">"، "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"اجازتوں کا نظم کریں"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"وقت: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"کوئی حالیہ رسائی نہیں ہے"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"جن ایپس نے حال ہی میں آپ کے ڈیٹا تک رسائی حاصل کی ہے وہ خودکار طور پر یہاں دکھائی دیں گی"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"سبھی دیکھیں"</string>
+    <!-- no translation found for recent_access_error (2258399573560888960) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"سرگرمی"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"سرگرمی"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"جسمانی پیمائشوں سے متعلق ڈیٹا"</string>
